{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 33,
  "lineage": "de95757b-1fd6-ef31-bb87-64b296165847",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-public-ip-1",
                "load_balancer_rules": [
                  "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/loadBalancingRules/web-app-rule"
                ],
                "name": "web-lb-public-ip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/publicIPAddresses/hr-dev-lbpublicip"
              }
            ],
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "location": "eastus",
            "name": "hr-dev-web-lb",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Compute/virtualMachineScaleSets/hr-dev-web-vmss/virtualMachines/0/networkInterfaces/web-vmss-nic/ipConfigurations/internal",
              "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Compute/virtualMachineScaleSets/hr-dev-web-vmss/virtualMachines/3/networkInterfaces/web-vmss-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "load_balancing_rules": [
              "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/loadBalancingRules/web-app-rule"
            ],
            "loadbalancer_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/probes/http-port",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/loadBalancingRules/web-app-rule"
            ],
            "loadbalancer_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "http-port",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-public-ip-1",
            "frontend_ip_configuration_name": "web-lb-public-ip-1",
            "frontend_port": 80,
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/loadBalancingRules/web-app-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "web-app-rule",
            "probe_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/probes/http-port",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.example",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_linux_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkInterfaces/hr-dev-bastion-linux-nic",
            "internal_domain_name_suffix": "nrnfvkdiahte5a55mxo4jb51th.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-linux",
                "primary": true,
                "private_ip_address": "10.0.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-linux-publicip",
                "subnet_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-bastionsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2B-0F-7A",
            "name": "hr-dev-bastion-linux-nic",
            "private_ip_address": "10.0.100.4",
            "private_ip_addresses": [
              "10.0.100.4"
            ],
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "virtual_machine_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Compute/virtualMachines/hr-dev-bastion-linux-vm"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_linux_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-bastionsubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-default-bastionsubnet-nsg",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3389",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-websubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-default-websubnet-nsg",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmss_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-vmss-nsg",
            "location": "eastus",
            "name": "hr-dev-web-vmss-nsg",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-Rule-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-Rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound-Rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-default-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "hr-dev-vnet-default-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-default-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-default-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-default-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_linux_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-linux-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.168.254.235",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-bastion-linux-publicip",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_service_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-host",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.168.254.220",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-bastion-host",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lbpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/publicIPAddresses/hr-dev-lbpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.168.254.231",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-lbpublicip",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_service_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.101.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "virtual_network_name": "hr-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-bastionsubnet",
            "name": "hr-dev-vnet-default-bastionsubnet",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "virtual_network_name": "hr-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-websubnet",
            "name": "hr-dev-vnet-default-websubnet",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "virtual_network_name": "hr-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-bastionsubnet",
            "network_security_group_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-websubnet",
            "network_security_group_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-websubnet-nsg",
            "subnet_id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a85a5a6c-0168-4fe6-83ff-65dde487fb9f",
            "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default",
            "location": "eastus",
            "name": "hr-dev-vnet-default",
            "resource_group_name": "hr-dev-rg-default-mrbacc",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-websubnet",
                "name": "hr-dev-vnet-default-websubnet",
                "security_group": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-websubnet-nsg"
              },
              {
                "address_prefix": "10.0.100.0/24",
                "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/hr-dev-vnet-default-bastionsubnet",
                "name": "hr-dev-vnet-default-bastionsubnet",
                "security_group": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-default-bastionsubnet-nsg"
              },
              {
                "address_prefix": "10.0.101.0/27",
                "id": "/subscriptions/d379b4a7-3994-452b-b9e8-c084520b1523/resourceGroups/hr-dev-rg-default-mrbacc/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet-default/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}